# giskard

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/giskard-oss-quality-gate/: SKILL.md
.claude/skills/setup-env/: SKILL.md
.cursor/skills/giskard-oss-pr-ready/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: giskard_bug_template.yaml
.github/workflows/: ci.yml  integration-tests.yml  pr-labeler.yml  release.yml  zizmor.yml
libs/giskard-agents/src/giskard/agents/: __init__.py
libs/giskard-agents/src/giskard/agents/generators/: giskard_llm_generator.py  litellm_generator.py
libs/giskard-agents/tests/: conftest.py  test_generator_backends.py  test_litellm_generator.py  test_smoke.py
libs/giskard-checks/: pyproject.toml
libs/giskard-checks/src/giskard/checks/: __init__.py
libs/giskard-checks/src/giskard/checks/builtin/: __init__.py  rego_policy.py  semantic_similarity.py
libs/giskard-checks/src/giskard/checks/core/: __init__.py  exceptions.py  input_generator.py  mixin.py  scenario.py  types.py
libs/giskard-checks/src/giskard/checks/core/interaction/: interact.py
libs/giskard-checks/src/giskard/checks/generators/: __init__.py  base.py  user.py
libs/giskard-checks/src/giskard/checks/judges/: __init__.py  base.py  contradiction.py
libs/giskard-checks/src/giskard/checks/prompts/generators/: user_simulator.j2
libs/giskard-checks/src/giskard/checks/prompts/judges/: contradiction.j2  groundedness.j2
libs/giskard-checks/src/giskard/checks/prompts/scenarios/: llm01_indirect_injection.j2
libs/giskard-checks/src/giskard/checks/scenarios/: __init__.py  catalog.py  runner.py  suite.py
libs/giskard-checks/src/giskard/checks/utils/: inference.py
libs/giskard-checks/tests/: test_smoke.py
libs/giskard-checks/tests/builtin/: test_contradiction.py  test_groundedness.py  test_rego_policy.py
libs/giskard-checks/tests/core/: test_input_generator.py  test_input_type_inference.py  test_missing_serialization.py  test_mixin.py  test_trace_type_inference.py
libs/giskard-checks/tests/generators/: conftest.py  test_llm_generator.py  test_user.py
libs/giskard-checks/tests/scenarios/: test_catalog.py
libs/giskard-core/: pyproject.toml
libs/giskard-core/src/giskard/core/: __init__.py  utils.py
libs/giskard-core/src/giskard/core/telemetry/: telemetry.py
libs/giskard-llm/: README.md  pyproject.toml
libs/giskard-llm/src/giskard/llm/: __init__.py
libs/giskard-llm/src/giskard/llm/providers/: anthropic.py  azure_ai.py  azure_openai.py  google.py  openai.py
libs/giskard-llm/src/giskard/llm/translators/: google_chat.py  openai_chat.py
libs/giskard-llm/src/giskard/llm/types/: chat.py
libs/giskard-llm/tests/: test_providers.py  test_routing.py  test_smoke.py
libs/giskard-llm/tests/functional/: test_completion.py  test_multi_system.py
libs/giskard-llm/tests/translators/: test_google_chat.py  test_google_chat_return.py  test_google_response.py  test_google_response_return.py
libs/giskard-scan/src/giskard/scan/: __init__.py  catalog.py  quality.py  registry.py  vulnerability.py
libs/giskard-scan/src/giskard/scan/generators/: __init__.py  adversarial.py  base.py  crescendo.py  goat.py  knowledge_base.py  prompt_injection.py
libs/giskard-scan/src/giskard/scan/prompts/scenarios/: knowledge_base_question.j2  knowledge_base_sycophancy.j2
libs/giskard-scan/tests/: conftest.py  test_generators_concrete.py  test_public_api.py  test_quality.py  test_vulnerability.py
libs/giskard-scan/tests/generators/: test_catalog.py  test_knowledge_base.py  test_registry.py  test_sycophancy.py
