[project]
name = "giskard"
readme = "README.md"
license = { text = "Apache Software License 2.0" }
version = "3.0.0a1"
description = "The testing framework dedicated to ML models, from tabular to LLMs"
authors = [{ name = "Giskard AI", email = "hello@giskard.ai" }]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "giskard-core>=1.0.0a1",
    "giskard-agents>=1.0.0a1",
    "giskard-checks>=1.0.0a1",
    "giskard-scan>=1.0.0b1",
]
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://giskard.ai"
"Source Code" = "https://github.com/Giskard-AI/giskard"
"Bug Tracker" = "https://github.com/Giskard-AI/giskard/issues"
"Documentation" = "https://docs.giskard.ai/"
"Discord" = "https://discord.gg/ABvfpbu69R"
"Linkedin" = "https://www.linkedin.com/company/giskard-ai"
"Mastodon" = "https://fosstodon.org/@Giskard"
"Twitter" = "https://twitter.com/giskard_ai"

[tool.uv.workspace]
members = [
    "libs/*",
]

[tool.uv.sources]
giskard-core = { workspace = true }
giskard-llm = { workspace = true }
giskard-agents = { workspace = true }
giskard-checks = { workspace = true }
giskard-scan = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "functional: tests that require external API calls (deselect with '-m \"not functional\"')",
    "openai: tests requiring the openai provider SDK",
    "google: tests requiring the google-genai provider SDK",
    "anthropic: tests requiring the anthropic provider SDK",
    "azure: tests requiring the openai SDK (Azure OpenAI)",
    "azure_ai: tests requiring the openai SDK (Azure AI Foundry)",
    "no_providers: tests that run without any provider SDK installed",
]

[dependency-groups]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-timeout==2.4.0",
]
dev = [
    { include-group = "test" },
    "giskard-llm[openai,google,anthropic]>=1.0.0a1",
    "giskard-agents[litellm]>=1.0.0a1",
    "giskard-checks[regorus]>=1.0.0a1",
    "ipykernel==7.2.0",
    "pip-audit==2.10.0",
    "pylint-pydantic==0.4.1",
]
