[project]
name = "giskard-llm"
version = "1.0.0b3"
description = "Lightweight LLM routing layer over native provider SDKs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.12"
dependencies = [
    "giskard-core>=1.0.1b3,<2",
    "pydantic>=2.11.0,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.30,<3"]
google = ["google-genai>=2.0,<3"]
anthropic = ["anthropic>=0.40,<1"]
azure = ["giskard-llm[openai]"]  # alias: azure/ and azure_ai/ use the openai SDK
all = ["giskard-llm[openai,google,anthropic]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "openai: tests requiring the openai SDK",
    "bare: tests exercising the no-prefix routing default (openai SDK)",
    "google: tests requiring the google-genai SDK",
    "gemini: tests for the gemini/ routing alias (google-genai SDK)",
    "anthropic: tests requiring the anthropic SDK",
    "azure: tests requiring the openai SDK (Azure OpenAI)",
    "azure_ai: tests requiring the openai SDK (Azure AI Foundry)",
    "azure_foundry_v1: tests requiring the openai SDK (Azure Foundry OpenAI v1)",
    "functional: functional tests making real API calls",
    "no_providers: tests that run without any provider SDK installed",
]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]

[tool.ruff.lint]
select = ["I", "F401"]
